--- a/index.html
+++ b/index.html
@@ -75,6 +75,11 @@
         align-items: center;
         height: 100vh;
     }
+    @media (max-width: 800px) {
+    .container {
+      flex-direction: column;
+    }
+  }
     #canvas {
         border: 1px solid #000;
         display: none;
